syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "EcoSpider.Shared.Grpc";

service ProductSvc {
  rpc GetProductById(ProductLookUp) returns (ProductData);
  rpc GetProducts(google.protobuf.Empty) returns (stream ProductData);
  rpc StoreProduct(ProductData) returns (ReturnMessage);
  rpc StoreManyProducts(stream ProductData) returns (ReturnMessage);
}

message ProductLookUp
{
  int32 id = 1;
}

// Product data
message ProductData {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  bytes image = 5;
  CategoryData category = 6;
}

// Category of the products
message CategoryData {
  int32 id = 1;
  string name = 2;
}

message ReturnMessage {
  bool success = 1;
  string message = 2;
}